icons dependency and added icons to social media section in footer

--- a/little/src/App.css
+++ b/little/src/App.css
@@ -93,10 +93,11 @@ Footer {
 
 .footerNav Navigation{
   display: grid;
- 
-  
- 
- 
-  
 }
 
+.iconSocial{
+  display: flex;
+  margin: 5px;
+  align-items: baseline;
+  
+}
